--- a/docs/css/contact.css
+++ b/docs/css/contact.css
@@ -269,6 +269,11 @@ button[type="submit"]:after {
     display: flex;
     flex-direction: column;
     margin: 10px;
+    transition-duration: 0.6s;
+}
+
+.links_footer a:hover{
+    color: #ee6e12;
 }
   
 .links_footer2 a {
@@ -279,6 +284,11 @@ button[type="submit"]:after {
     display: flex;
     flex-direction: column;
     margin: 10px;
+    transition-duration: 0.6s;
+}
+
+.links_footer2 a:hover{
+    color: #ee6e12;
 }
   
 .email_footer {
@@ -302,6 +312,11 @@ button[type="submit"]:after {
 
 .email_em{
     display: flex;
+    transition-duration: 0.6s;
+}
+
+.email_em a:hover{
+    color: #ee6e12;
 }
 
 input[type="email"] {
@@ -319,6 +334,7 @@ input[type="email"] {
     color: white;
     grid-area: 2/2/2/5;
     margin-top: 35px;
+    font-family: Agbalumo;
 }
 
 
