--- a/docs/css/shop.css
+++ b/docs/css/shop.css
@@ -359,7 +359,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 10px;
-    
+    transition-duration: 0.6s;
 }
 
 .links_footer a:hover{
@@ -374,6 +374,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 10px;
+    transition-duration: 0.6s;
 }
 
 .links_footer2 a:hover{
@@ -401,6 +402,7 @@ body {
 
 .email_em{
     display: flex;
+    transition-duration: 0.6s;
 }
 
 .email_em a:hover{
