--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -270,7 +270,7 @@ hr {
     display: flex;
     flex-direction: column;
     margin: 10px;
-    
+    transition-duration: 0.6s;
 }
 
 .links_footer a:hover{
@@ -285,6 +285,7 @@ hr {
     display: flex;
     flex-direction: column;
     margin: 10px;
+    transition-duration: 0.6s;
 }
 
 .links_footer2 a:hover{
@@ -312,6 +313,7 @@ hr {
 
 .email_em{
     display: flex;
+    transition-duration: 0.6s;
 }
 
 .email_em a:hover{
