--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 .img_text {
-    background-image: url(/Images/HomeImage/bg3.jpg);
+    background-image: url(../images/HomeImage/bg3.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
     border-radius: 10px;
@@ -55,7 +55,7 @@ body {
 }
 
 .img_text.flipped {
-    background-image: url(/Images/extra/bg.jpg);
+    background-image: url(../images/extra/bg.jpg);
 }
 
 .intro-description {
@@ -117,7 +117,7 @@ h2{
     padding-bottom: 20px;
     display: flex;
     justify-content: space-around;
-    background: url(/Images/HomeImage/stars_bg2.jpg);
+    background: url(../images/HomeImage/stars_bg2.jpg);
     background-size: 100%;
     background-position: initial;
     background-repeat: no-repeat;
@@ -193,7 +193,7 @@ hr {
 /* ------------------------Story Cake------------------------ */
 
 .story_cake{
-    background: url(/Images/HomeImage/cake\ for\ page.jpg);
+    background: url(../images/HomeImage/cake\ for\ page.jpg);
     background-size: cover;
     background-position-x: ;
     background-position-y: 5%;
@@ -342,45 +342,45 @@ input[type="email"] {
 /* -----------------------------Font Styles -------------------------------------*/
 @font-face {
     font-family: 'Agbalumo';
-    src: url('/css/font-family/Agbalumo-Regular.ttf') format('truetype');
+    src: url('font-family/Agbalumo-Regular.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Playfair Display';
-    src: url('/css/font-family/PlayfairDisplay-VariableFont_wght.ttf') format('truetype');
+    src: url('font-family/PlayfairDisplay-VariableFont_wght.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Bebas Neue';
-    src: url('/css/font-family/BebasNeue-Regular.ttf') format('truetype');
+    src: url('font-family/BebasNeue-Regular.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Caveat';
-    src: url('/css/font-family/Caveat-VariableFont_wght.ttf') format('truetype');
+    src: url('font-family/Caveat-VariableFont_wght.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'KdamThmor';
-    src: url('/css/font-family/KdamThmorPro-Regular.ttf') format('truetype');
+    src: url('font-family/KdamThmorPro-Regular.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Cinzel';
-    src: url('/css/font-family/Cinzel-VariableFont_wght.ttf') format('truetype');
+    src: url('font-family/Cinzel-VariableFont_wght.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'SpecialElite';
-    src: url('/css/font-family/SpecialElite-Regular.ttf') format('truetype');
+    src: url('font-family/SpecialElite-Regular.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'AkayaKanadaka';
-    src: url('/css/font-family/AkayaKanadaka-Regular.ttf') format('truetype');
+    src: url('font-family/AkayaKanadaka-Regular.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'LuckiestGuy';
-    src: url('/css/font-family/LuckiestGuy-Regular.ttf') format('truetype');
+    src: url('font-family/LuckiestGuy-Regular.ttf') format('truetype');
 }
